# rs-jsai-crawler

./: .gitignore  README.md
gen_wordcloud/: main.py  pyproject.toml  stopwords.en.csv
jsai-crawler/: Cargo.toml
jsai-crawler/src/: main.rs
jsai-crawler/src/crawlers/: mod.rs
jsai-crawler/src/crawlers/jsai2021/: kernel.rs  models.rs
jsai-crawler/src/crawlers/jsai2022/: kernel.rs  models.rs
jsai-crawler/src/crawlers/jsai2023/: kernel.rs  mod.rs  models.rs
jsai-crawler/src/crawlers/jsai2024/: kernel.rs  models.rs
jsai-crawler/src/crawlers/jsai2025/: kernel.rs  models.rs
jsai-crawler/src/mecab/: mod.rs
jsai-crawler/src/mecab/dic/: stopwords.csv  user_dic.csv
jsai-crawler/src/shared/: utils.rs
jsai-crawler/src/stats/: ai.rs  mod.rs  models.rs
