[package]
name = "jsai-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
charming = { version = "0.5.1", features = ["ssr", "ssr-raster"] }
clap = { version = "4.5.40", features = ["derive"] }
csv = "1.3.1"
derive-new = "0.7.0"
dotenvy = "0.15.7"
fxhash = "0.2.1"
indicatif = "0.17.11"
lazy_static = "1.5.0"
once_cell = "1.21.3"
openai-tools = "0.1.3"
rand = "0.9.1"
regex = "1.11.1"
request = { package = "reqwest", version = "0.12.20" }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
thirtyfour = "0.35.0"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
vibrato = "0.5.2"
xz2 = "0.1.7"
zstd = "0.13.3"
